@@ -49,6 +49,7 @@ Eric Paire		bug report about gtags-parser's memory violation.
 Frederic Maitre		bug report about global(1) and gtags(1) at the system root directory.
 Gary Kline		advice about the name of parser.
 Geoffrey Robson		bug report about global (-t option didn't work correctly).
+George Neville-Neil	report about the useless inspection of gtags(1).
 Giuseppe Corbelli	Global.py for glimmer code editor and an advice about vim.
 Hageseter, Trond E.	bug report about gtags-parser.
 Hendrik Visage		bug report about gtags-parser(here document of PHP).
